# spring-26

students/bykovchenko-sa/lab1/: README.md  id3_classifier.py
students/chebykin-aa/lab1/: README.md
students/chebykin-aa/lab1/results/: id3_test_after.txt  id3_test_before.txt  id3_train_after.txt  id3_train_before.txt  sklearn_test.txt
students/chebykin-aa/lab1/source/: main.py  model.py  utils.py
students/ivanov-ms/lab1/: README.md  pyproject.toml
students/ivanov-ms/lab1/logs/: logs_no_pruning.txt  logs_pruning.txt
students/ivanov-ms/lab1/source/: main.py
students/ivanov-ms/lab1/source/data/: __init__.py  load_data.py  pipeline.py  process_data.py
students/ivanov-ms/lab1/source/models/: __init__.py  decision_tree.py
students/ivanov-ms/lab1/source/utils/: __init__.py  compare.py  metrics.py  plotting.py
students/kasiutin-ia/lab1/: README.md
students/kasiutin-ia/lab1/source/: initial_eda.ipynb  model.py  model_inference.ipynb  prepare_data.py
students/rudinskiy-ti/lab1/: README.md
students/rudinskiy-ti/lab1/source/: DecisionTree.py  main.py
students/rudyk-yy/lab1/: README.md
students/rudyk-yy/lab1/source/: lab1.ipynb  model.py
students/volosevich-an/: README.md
students/volosevich-an/lab1/: README.md
students/volosevich-an/lab1/source/: impute_proba.py  loosify_dataset.py  pipeline.py  tree.py
tasks/task-04/: README.md
